[package]
name = "coio"
version = "0.2.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>", "Leonard Hecker <leonard@hecker.io>"]
description = "Coroutine scheduler with non-blocking I/O support"
repository = "https://github.com/zonyitoo/coio-rs"
keywords = ["coroutine", "fiber", "green", "green thread", "non-blocking", "io", "async"]
license = "MIT/Apache-2.0"

[lib]
name = "coio"

[dev-dependencies]
clap = "2.16"
env_logger = "0.3"
num_cpus = "1.1"

[dependencies]
context = "1.0"
deque = "0.3"
libc = "0.2"
linked-hash-map = "0.3.0"
mio = "0.6"
rand = "0.3"
slab = "0.3.0"
time = "0.1"

[dependencies.log]
version = "0.3"
features = ["release_max_level_info"]

[[bench]]
name = "spinlock"
harness = false
