[package]
name = "coio-benchmarks"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[dependencies]
bytes = "0.3"
clap = "2.1"
#hyper = "*"
log = "0.3"
mio = "0.5"

#[[bin]]
#name = "coio-http-echo-server"

[[bin]]
name = "coio-tcp-echo-server"

[[bin]]
name = "mio-tcp-echo-server"

[[bin]]
name = "threaded-tcp-echo-server"

[dependencies.coio]
path = "../"
