[package]
name = "coio-benchmarks"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[dependencies]
bytes = "0.3"
clap = "2.1"
#hyper = "*"
mio = "0.5"
mioco = "0.7"

[dependencies.log]
version = "0.3"
features = ["release_max_level_info"]

[dependencies.coio]
path = "../"

#[[bin]]
#name = "coio-http-echo-server"

[[bin]]
name = "coio-tcp-echo-server"

[[bin]]
name = "mio-tcp-echo-server"

[[bin]]
name = "mioco-tcp-echo-server"

[[bin]]
name = "threaded-tcp-echo-server"

[[bin]]
name = "coio-cheated-http-echo-server"
